Customizing appearance of sticky-card, fileList, and creating showCancelButton prop in ChatItem

--- a/src/styles/components/chat/_chat-prompt-wrapper.scss
+++ b/src/styles/components/chat/_chat-prompt-wrapper.scss
@@ -219,7 +219,7 @@
 
 >.mynah-chat-prompt-input-sticky-card {
     &:not(:empty) {
-        padding-top: var(--mynah-sizing-4);
+        padding: 0px;
     }
 
     >.mynah-chat-item-card {
